# feedler

./: AUTHORS  CMakeLists.txt  INSTALL  README.md
data/: CMakeLists.txt  feedler.cmake  feedler.desktop.in  feedler.service.cmake  org.elementary.feedler.gschema.xml
po/: POTFILES.in  af.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  feedler.pot  fi.po  fr.po  fr_CA.po  he.po  hi.po  hu.po  id.po  it.po  ko.po  lv.po  ms.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sma.po  sr.po  sv.po  (+6 more)
src/: database.vala  desktop-launcher.vala  dock.vala  feedler.vala  history.vala  icons.vala  indicator.vala  manager.vala  settings.vala  window.vala
src/service/: CMakeLists.txt  abstract.vala  backend-xml.vala  client.vala  interface.vala  model.vala  serializer.vala  service.vala  settings.vala
src/ui/: cardlayout.vala  contractor.vala  folder.vala  infobar.vala  layout.vala  menu.vala  preferences.vala  sidebar-cell.vala  sidebar.vala  statusbar.vala  subscription.vala  toolbar.vala  view-cell.vala  view-list.vala  view-web.vala  view.vala
vapi/: Indicate-0.7.vapi  config.vapi
